# woodshed

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
notes/: design.md
src/: files.rs  frame.rs  index.rs  issue.rs  lib.rs  manifest.rs  recovery.rs  scan.rs  state.rs  store.rs
